[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-langgraph"
version = "2.8.0"
description = "Production-ready MCP server with LangGraph, OpenFGA, and multi-LLM support"
readme = "README.md"
authors = [
    {name = "MCP Server with LangGraph Contributors", email = "noreply@github.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11,<3.14"
keywords = ["mcp", "model-context-protocol", "langgraph", "llm", "agent", "anthropic", "openai", "openfga", "authorization", "observability", "opentelemetry", "langchain", "litellm", "multi-llm", "ai-agent"]
dependencies = [
    "langgraph>=1.0.4",  # Updated 2025-11-28: Minor bugfixes
    "langgraph-checkpoint-redis>=0.2.1",  # Updated 2025-11-28: Redis checkpointer for distributed conversation state
    "langchain-core>=1.1.0",  # Updated from 1.0.4 for security fixes
    "langsmith>=0.4.49",  # Updated 2025-11-28: Many improvements
    "litellm>=1.80.5",  # Updated 2025-11-28: Minor updates, Gemini 3 Pro support
    "mcp>=1.23.3",  # Updated 2025-12-10: MCP spec 2025-11-25 support (Tasks, Sampling with Tools, Icons, XAA)
    "PyJWT>=2.10.1",
    "cryptography>=46.0.3",
    "bcrypt>=5.0.0",  # Password hashing for InMemoryUserProvider (production security)
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-instrumentation-logging>=0.59b0",
    # OTEL exporters moved to optional-dependencies[observability-*]
    # Choose observability-grpc OR observability-http based on your backend
    "openfga-sdk>=0.9.8",  # Updated 2025-11-28: Minor updates
    # infisical-python moved to optional-dependencies[secrets]
    # Application falls back to environment variables if not installed
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.5",  # Updated 2025-11-28: Bugfixes
    "pydantic-settings>=2.12.0",  # Updated 2025-11-28: New features
    "pydantic-ai>=1.25.0",  # Updated 2025-11-28: Anthropic enhancements, native JSON output
    "httpx>=0.28.1",
    "certifi>=2024.0.0",  # Cross-platform CA bundle for SSL verification in CI environments
    # NOTE: urllib3 capped at <2.4.0 by kubernetes client (34.1.0)
    # CVE-2025-50181, CVE-2025-50182 fixes in 2.5.0 pending kubernetes-client/python#2439
    # https://github.com/kubernetes-client/python/issues/2458 tracks the blocker
    "fastapi>=0.122.0",  # Updated 2025-11-28: Python 3.14 support
    "starlette>=0.50.0",  # Updated from 0.48.0, fixes CVE-2025-62727 (Range header DoS)
    "anyio>=4.4.0,<4.10.0",  # Pin for Starlette/httpx compatibility; 4.10.0+ removed _backends module
    "uvicorn[standard]>=0.38.0",
    "python-keycloak>=5.8.1",
    "authlib>=1.6.5",
    "redis[hiredis]>=6.4.0,<7.0.0",  # Pinned <7.0.0: langgraph-checkpoint-redis requires redis<7.0.0
    "asyncpg>=0.29.0",  # PostgreSQL async driver for GDPR/HIPAA/SOC2 compliance storage
    "sqlalchemy[asyncio]>=2.0.44",  # Updated 2025-11-28: Python 3.14, free-threaded support
    "alembic>=1.17.2",  # Updated 2025-11-28: Multiple improvements
    "pyyaml>=6.0.3",
    "apscheduler>=3.11.0,<4.0.0",  # Pin to 3.x - APScheduler 4.x has breaking API changes
    "python-json-logger>=4.0.0",
    "tiktoken>=0.5.0",  # Token counting for response optimization
    # Anthropic Best Practices Enhancements (ADR-0025)
    "qdrant-client>=1.16.1",  # Updated 2025-11-28: Vector search improvements
    "langchain-google-genai>=3.0.0",  # Google Gemini embeddings (API-based, no model hosting)
    # Monitoring
    "prometheus-api-client>=0.5.5",  # For querying Prometheus metrics in SLA monitoring
    "prometheus-client>=0.20.0",  # For exporting Prometheus metrics
    # Resilience Patterns (ADR-0026)
    "pybreaker>=1.0.0",  # Circuit breaker pattern for preventing cascade failures
    "tenacity>=9.1.2",  # Retry logic with exponential backoff
    "cachetools>=5.3.0",  # In-memory LRU cache for L1 caching (ADR-0028)
    "slowapi>=0.1.9",  # Rate limiting for FastAPI (ADR-0027)
    # LLM Provider SDKs (required for LiteLLM multi-provider support)
    "google-cloud-aiplatform>=1.38.0",  # Vertex AI SDK (default: Anthropic Claude on Vertex)
    "anthropic>=0.46.0",  # Anthropic Claude direct API
    "openai>=1.82.0",  # OpenAI models (GPT-4, o1, etc.)
    "boto3>=1.35.0",  # AWS Bedrock (Claude, Titan, Mistral on AWS)
    "azure-identity>=1.15.0",  # Azure OpenAI authentication
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=9.0.1",  # Updated 2025-11-28: MAJOR 8.x→9.x (pytest-split removed, unblocking upgrade)
    "pytest-asyncio>=1.3.0",  # Updated 2025-11-28: Python 3.14 support
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "pytest-watch>=4.2.0",  # Watch mode for continuous testing during development
    "pytest-xdist>=3.5.0",  # Parallel test execution (local + CI via GitHub Actions matrix)
    # NOTE: pytest-split removed (2025-11-28) - replaced by pytest-xdist + GitHub Actions matrix strategy
    # This allows upgrading to pytest 9.x and reduces dependency count (YAGNI principle)
    # NOTE: pytest-testmon removed (2025-11-28) - incompatible with pytest 9.x (requires pytest<9)
    # Additionally, testmon has xdist incompatibility issues (see docs-internal/VALIDATION_FLOW_REMEDIATION_FINAL_SUMMARY.md)
    "pytest-timeout>=2.2.0",  # Prevent tests from hanging indefinitely (async mock safety)
    "psutil>=6.1.0",  # Memory monitoring for auto-tuning pytest-xdist workers
    # Docker infrastructure management
    # NOTE: Infrastructure lifecycle managed by shell scripts (make test-integration), not Python libraries
    # pytest-docker-compose-v2 and python-on-whales removed - plugin fixtures not used, custom fixtures in conftest.py instead
    "docker>=7.1.0",  # Docker Python SDK for test imports (tests/unit/execution/test_docker_sandbox_unit.py)
    "kubernetes>=34.1.0",  # Updated 2025-11-28: Minor update
    # Time mocking for deterministic tests
    "freezegun>=1.5.1",  # Freeze time for deterministic timestamp testing
    # Property-based testing
    "hypothesis>=6.100.0,<6.147.0",  # Pin <6.147.0: 6.147.x has xdist import race on 3.11, 6.148.x removed optimiser module
    "hypothesis-jsonschema>=0.22.1",
    # Contract testing
    "jsonschema>=4.21.0",
    "schemathesis>=4.3.4",
    "openapi-spec-validator>=0.7.1",
    # Mutation testing
    "mutmut>=3.3.1",
    # Code quality
    "ruff>=0.14.6",  # Replaces black, isort, and flake8 (10-100x faster, Rust-based) - synced with pre-commit
    # NOTE: black, flake8, isort removed (2025-11-28) - fully replaced by Ruff
    "mypy>=1.19.0",  # Updated 2025-11-28: 40% faster type checking
    "types-PyYAML",
    # types-redis removed (2025-11-28) - redis 5.0+ includes inline type hints (py.typed)
    # types-redis was causing conflicts with redis 6.x inline types
    "types-requests",
    "types-psutil",  # Type stubs for psutil (memory monitoring)
    "bandit>=1.7.6",
    # Security scanning (CodeQL parity - PR #121)
    "semgrep>=1.51.0",  # Static security analysis for Python (matches CodeQL detection capabilities)
    # Configuration parsing
    "toml>=0.10.2",  # For reading pyproject.toml in validation scripts
    # Documentation validation
    "validators>=0.34.0",  # URL and data validation for MDX documentation tests
    # Deployment tools
    "langgraph-cli>=0.1.0",
    # Git hooks and CI tools
    "pre-commit>=4.5.0",  # Updated 2025-11-28: Latest updates
    "yamllint>=1.37.1",  # YAML linting for Kubernetes manifests and configs
    # Coverage tools (also available separately via coverage-tools extra)
    "coverage[toml]>=7.0.0",  # Coverage.py with TOML support
    "packaging>=23.0",  # Version parsing for MCP SDK compatibility tests
    # CLI testing dependencies (duplicated from cli extra for test coverage)
    "click>=8.1.0,<8.4.0",  # Command-line interface framework (8.2+ removed _textwrap module)
    "jinja2>=3.1.0",  # Template engine for code generation
    "rich>=13.0.0",  # Rich text and beautiful formatting in the terminal
    "websockets>=12.0",  # Required for E2E test imports (also in playground extra)
    "packaging>=21.0",  # Version parsing for MCP SDK version tests
]

secrets = [
    # Infisical secrets management (requires Rust toolchain or pre-built wheels)
    # See: requirements-infisical.txt for installation options
    # Docker builds: Automatically installed
    # Local builds: See docs/deployment/infisical-installation.md
    "infisical-python>=2.1.7,<=2.3.5",
]

cli = [
    # CLI scaffolding tools
    "click>=8.1.0,<8.4.0",  # Command-line interface framework (8.2+ removed _textwrap module)
    "jinja2>=3.1.0",  # Template engine for code generation
    "rich>=13.0.0",  # Rich text and beautiful formatting in the terminal
]

playground = [
    # Web playground dependencies
    "fastapi>=0.122.0",  # Already in core deps, listed for clarity (updated 2025-11-28)
    "uvicorn[standard]>=0.38.0",  # Already in core deps
    "websockets>=12.0",  # WebSocket support for streaming
    "jinja2>=3.1.0",  # Template rendering
]

# NOTE: `builder` extra REMOVED (2025-11-28) - Dead code analysis:
# - fastapi: Already in core deps (redundant)
# - jinja2: Already in cli extra (redundant)
# - ruff: Already in dev extra (redundant)
# - ast-comments: Not imported anywhere in src/ (unused)
# Workflows updated to use `dev` instead.

code-execution = [
    # Code execution sandbox dependencies
    # Supports both Docker Engine (local/dev) and Kubernetes (production)
    "docker>=7.1.0",  # Docker Python SDK for container management
    "kubernetes>=34.1.0",  # Updated 2025-11-28: Minor update
    "psutil>=6.1.0",  # Process and system monitoring
]

cloud = [
    # Additional cloud provider SDKs (optional)
    # NOTE: Core LLM SDKs moved to main dependencies:
    # - google-cloud-aiplatform (Vertex AI)
    # - boto3 (AWS Bedrock)
    # - anthropic, openai, azure-identity
    # This group is now empty but retained for backwards compatibility
]

# ==============================================================================
# CI/CD AND WORKFLOW TOOLS
# ==============================================================================

# NOTE: `coverage-tools` extra REMOVED (2025-11-28) - Redundant:
# - coverage[toml]>=7.0.0 is already in `dev` extra
# Workflows updated to use `dev` instead.

monitoring = [
    # Workflow monitoring and metrics collection
    "requests>=2.31.0",  # HTTP client for API calls and metrics reporting
]

release-tools = [
    # PyPI package building and publishing
    "build>=1.0.0",  # PEP 517 build frontend
    "twine>=6.0.0",  # Secure PyPI uploads
    # CI badge generation
    "pybadges>=3.0.0",  # GitHub-style badges for telemetry dashboard
    "setuptools>=75.0.0",  # Required by pybadges on Python 3.12+
]

# ==============================================================================
# EMBEDDING OPTIONS - Choose based on deployment strategy
# ==============================================================================
#
# embeddings-api:   Lightweight (~0MB overhead) - Uses Google Gemini API
#                   Already included in core dependencies via langchain-google-genai
#                   Recommended for: Cloud deployments, cost-sensitive environments
#
# embeddings-local: Heavy (~800MB overhead) - Self-hosted sentence-transformers
#                   Includes: PyTorch, transformers, tokenizers
#                   Recommended for: Air-gapped environments, data residency requirements
#
# ==============================================================================

embeddings-api = [
    # API-based embeddings (already in core deps, listed for clarity)
    # No additional dependencies required
]

embeddings-local = [
    # Self-hosted embeddings with full ML stack
    "sentence-transformers>=5.1.2",  # Updated 2025-11-28: Python 3.13 support
    "torch>=2.0.0,<3.0.0",  # Explicit PyTorch version control
]

# Backwards compatibility alias
embeddings = [
    "sentence-transformers>=5.1.2",  # Maps to embeddings-local (updated 2025-11-28)
]

# ==============================================================================
# OBSERVABILITY OPTIONS - Choose based on backend
# ==============================================================================

observability-grpc = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
]

observability-http = [
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
]

# Both exporters (for flexibility)
observability-full = [
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
]

# ==============================================================================
# COMBINED EXTRAS
# ==============================================================================

# All production features (explicit control, no heavy ML by default)
all = [
    "infisical-python>=2.1.7,<=2.3.6",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    # embeddings-local intentionally excluded - choose explicitly
]

# Everything including local embeddings (for full-featured deployments)
all-full = [
    "infisical-python>=2.1.7,<=2.3.6",
    "sentence-transformers>=5.1.2",  # Updated 2025-11-28: Python 3.13 support
    "torch>=2.0.0,<3.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
]

[project.scripts]
mcp-server-langgraph = "mcp_server_langgraph.mcp.server_stdio:main"
mcp-server-langgraph-http = "mcp_server_langgraph.mcp.server_streamable:main"
mcpserver = "mcp_server_langgraph.cli:main"

[project.urls]
Homepage = "https://github.com/vishnu2kmohan/mcp-server-langgraph"
Documentation = "https://github.com/vishnu2kmohan/mcp-server-langgraph/blob/main/README.md"
Repository = "https://github.com/vishnu2kmohan/mcp-server-langgraph"
Issues = "https://github.com/vishnu2kmohan/mcp-server-langgraph/issues"
Changelog = "https://github.com/vishnu2kmohan/mcp-server-langgraph/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "*.tests*", "*.tests"]

# ==============================================================================
# RUFF CONFIGURATION - Replaces black, isort, and flake8
# ==============================================================================

[tool.ruff]
line-length = 127
target-version = "py311"  # Updated: matches requires-python >= 3.11

# Exclude directories (same as black/isort/flake8)
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "htmlcov",
    ".pytest_cache",
    "*.egg-info",
    "scripts/archive",  # Archived/unused scripts - intentionally excluded
    "clients/python",   # Auto-generated OpenAPI client - do not lint
]

[tool.ruff.lint]
# Enable rule categories:
# E/W: pycodestyle errors and warnings
# F: pyflakes
# I: isort (import sorting)
# UP: pyupgrade (modernize Python syntax)
# B: flake8-bugbear (common bugs)
# RUF: Ruff-specific rules (unreachable code, etc.)
# S: flake8-bandit security rules (CodeQL parity - PR #121)
# ASYNC: async/await best practices (cloud-native)
# C4: comprehension simplifications (KISS)
# FAST: FastAPI best practices
# PERF: performance anti-patterns
# LOG/G: logging best practices
# PT: pytest best practices
# SIM: code simplification
# TRY/EM: exception handling patterns
select = ["E", "F", "I", "UP", "B", "RUF", "S", "ASYNC", "C4", "FAST", "PERF", "LOG", "G", "PT", "SIM", "TRY", "EM"]

# Ignore specific rules to align with black formatting and reduce noise during migration
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E402",  # module-import-not-at-top-of-file
    "E721",  # type-comparison
    # E722 (bare except) now ENABLED - scripts/archive excluded from linting (PR #121 CodeQL gap analysis)
    # F401 (unused imports) and F811 (redefinition) now ENABLED - fixes applied via PR #121
    "I001",  # unsorted-imports
    "B007",  # Loop variable not used
    "B008",  # FastAPI Depends in defaults (intentional pattern)
    "B011",  # assert-false
    "B017",  # assert-raises-exception
    "B018",  # useless-expression
    "B028",  # no-explicit-stacklevel
    # TODO: B904 (exception chaining) - 51 violations across src/, fix incrementally
    # B904 is best practice but low-severity. Tracked for future PR.
    "B904",  # raise-without-from-inside-except
    "UP028", # yield-in-for-loop
    "UP035", # deprecated-import
    # NOTE: UP038 was removed in Ruff v0.13.0 (isinstance union is slower, not recommended)
    # RUF rules temporarily ignored during migration (341 violations):
    # These are style/preference issues, not bugs. Can fix incrementally.
    "RUF001", # ambiguous-unicode-character-string (ℹ️ emoji)
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "RUF005", # collection-literal-concatenation
    "RUF010", # explicit-f-string-type-conversion
    "RUF012", # mutable-class-default (ClassVar annotation)
    "RUF013", # implicit-optional
    "RUF015", # unnecessary-iterable-allocation-for-first-element
    "RUF019", # unnecessary-key-check
    "RUF021", # parenthesize-chained-operators
    "RUF022", # unsorted-dunder-all
    "RUF034", # useless-if-else (archived scripts)
    "RUF043", # ambiguous-unicode-name
    "RUF059", # unused-unpacked-variable (low priority style fix)
    "RUF100", # unused-noqa (will clean up noqa directives separately)
    # S (security) rules - selectively ignored where appropriate:
    "S101",  # assert - used intentionally in tests and debug code
    "S104",  # hardcoded-bind-all-interfaces - 0.0.0.0 intentional for container networking
    "S110",  # try-except-pass - TODO: Fix incrementally (16 in src/, 38 in tests/)
    "S311",  # suspicious-non-cryptographic-random-usage - random used for non-security purposes
    # ASYNC rules - strategic ignores:
    "ASYNC109",  # async-function-with-timeout - timeout param is valid pattern for async APIs
    # SIM rules - strategic ignores:
    "SIM105",  # suppressible-exception - try/except/pass used for graceful degradation (e.g., logging)
    "SIM114",  # if-with-same-arms - often intentional for readability
    "SIM102",  # collapsible-if - often intentional for readability
    "SIM117",  # multiple-with-statements - prefer explicit context managers
    # LOG/G rules - style preference for lazy logging:
    "G004",    # logging-f-string - f-strings are readable, perf impact minimal
    "G201",    # logging-exc-info - intentional exc_info usage
    # TRY rules - exception handling style preferences:
    "TRY002",  # raise-vanilla-class - Custom exception classes not always needed
    "TRY003",  # raise-vanilla-args - Long exception messages are often clearer inline
    "TRY004",  # prefer-type-error - Sometimes ValueError is more appropriate
    "TRY300",  # try-consider-else - not always applicable
    "TRY301",  # raise-within-try - sometimes intentional for retry patterns
    "TRY401",  # redundant-exception-verbosity - explicit logging sometimes clearer
    # EM rules - exception message style preferences:
    "EM101",   # raw-string-in-exception - inline strings are often clearer
    "EM102",   # f-string-in-exception - inline f-strings are often clearer
    # PERF rules - defer to performance PR:
    "PERF401", # manual-list-comprehension - often more readable as loop
    # FAST rules - requires Annotated pattern refactoring:
    "FAST002",  # fast-api-non-annotated-dependency - requires Annotated[T, Depends()]
    # PT rules - pytest style preferences (tests work correctly without):
    "PT011",  # pytest-raises-too-broad - match param not always needed for simple cases
    "PT012",  # pytest-raises-with-multiple-statements - sometimes clearer inline
    "PT013",  # pytest-incorrect-pytest-import - import style preference
    "PT015",  # pytest-assert-always-false - intentional for unreachable code tests
    "PT017",  # pytest-assert-in-except - logging in except is valid pattern
    "PT018",  # pytest-composite-assertion - single assert often clearer
    # LOG rules - root logger acceptable in test fixtures:
    "LOG015",  # root-logger-call - test fixtures use module-level logging
    # Temporarily disabled during Ruff migration (can re-enable incrementally):
    # N-series (naming): 404 violations - will fix in separate PR
]

[tool.ruff.lint.isort]
# Use black-compatible isort settings
force-single-line = false
force-wrap-aliases = false
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use hardcoded passwords, subprocess, temp files for test fixtures
"tests/**/*.py" = [
    "S105",  # hardcoded-password-string - test fixtures use known passwords
    "S106",  # hardcoded-password-func-arg - test fixtures
    "S107",  # hardcoded-password-default - test fixtures
    "S108",  # hardcoded-temp-file - test temp directories
    "S112",  # try-except-continue - test error handling patterns
    # PT rules - test style preferences
    "PT003",  # pytest-fixture-scope-implied - explicit scope is clearer
    "PT004",  # pytest-missing-fixture-name-underscore - naming preference
    "PT005",  # pytest-incorrect-fixture-name-underscore - naming preference
    "PT006",  # pytest-parametrize-names-wrong-type - string format is valid and often clearer
    # SIM rules - test code readability over conciseness
    "SIM101",  # duplicate-isinstance-call - explicit checks often clearer in tests
    "SIM103",  # return-bool-condition-directly - explicit if/else often clearer in tests
    "SIM108",  # if-else-block-instead-of-if-exp - explicit blocks often clearer in tests
    "SIM110",  # use-any - explicit loops often clearer for complex AST traversal
    "SIM111",  # use-all - explicit loops often clearer for complex AST traversal
    "SIM118",  # in-dict-keys - .keys() is often more explicit in tests
    "SIM222",  # expr-or-true - explicit boolean checks in assertions
    # PERF rules - test readability over micro-optimization
    "PERF102",  # incorrect-dict-iterator - .items() often more readable in tests
    # C4 rules - comprehension style preferences
    "C401",   # unnecessary-generator-set - explicit generators in tests
    "C409",   # unnecessary-literal-within-tuple-call - explicit tuples in tests
    "C416",   # unnecessary-comprehension - explicit comprehensions in tests
    # ASYNC rules - test fixtures may use sync sleep for simplicity
    "ASYNC251",  # blocking-sleep-in-async-function - test fixtures use sync sleep
    "S301",  # suspicious-pickle-usage - testing serialization
    "S602",  # subprocess-popen-with-shell-equals-true - test process management
    "S603",  # subprocess-without-shell-equals-true - test process management
    "S605",  # start-process-with-a-shell - test shell commands
    "S607",  # start-process-with-partial-path - test executables
    "S608",  # hardcoded-sql-expression - test SQL queries
    "B904",  # raise-without-from-inside-except - test exception handling
]
# Scripts may use subprocess, shell commands, and local dev patterns intentionally
"scripts/**/*.py" = [
    "S106",  # hardcoded-password-func-arg - setup scripts use dev defaults
    "S108",  # hardcoded-temp-file - scripts use /tmp for temp storage
    "S112",  # try-except-continue - scripts handle errors gracefully
    "S501",  # request-with-no-cert-validation - local dev/setup scripts
    "S602",  # subprocess-popen-with-shell-equals-true
    "S603",  # subprocess-without-shell-equals-true
    "S605",  # start-process-with-a-shell
    "S607",  # start-process-with-partial-path
    # SIM rules - scripts prioritize readability over conciseness
    "SIM103",  # return-bool-condition-directly - explicit returns often clearer in scripts
    "SIM108",  # if-else-block-instead-of-if-exp - explicit blocks often clearer in scripts
    "SIM110",  # use-any - explicit loops often clearer for complex checks
    "SIM118",  # in-dict-keys - .keys() often more explicit in scripts
    "SIM201",  # use-not-equal - explicit comparison style preference
    # PERF rules - scripts prioritize readability over micro-optimization
    "PERF102",  # incorrect-dict-iterator - .items() often more readable
    # C4 rules - comprehension style preferences
    "C420",  # unnecessary-dict-comprehension - explicit comprehensions often clearer
]
# Examples and hooks use dev patterns
"examples/**/*.py" = [
    "S106",  # hardcoded-password-func-arg - examples use dev credentials
    "S501",  # request-with-no-cert-validation - examples show local dev usage
    "UP017",  # datetime-utc-alias - examples use explicit timezone.utc for clarity
]
"hooks/**/*.py" = [
    "S108",  # hardcoded-temp-file - hooks use temp directories
    "S112",  # try-except-continue - hooks handle errors gracefully
    "S607",  # start-process-with-partial-path - hooks run git commands
]
# False positives - these files don't contain actual secrets
"src/mcp_server_langgraph/auth/keycloak.py" = [
    "S107",  # False positive: "urn:ietf:params:oauth:token-type:access_token" is OAuth2 spec, not password
]
"src/mcp_server_langgraph/builder/codegen/generator.py" = [
    "S607",  # False positive: "ruff" is a known dev tool
]
"src/mcp_server_langgraph/compliance/gdpr/postgres_storage.py" = [
    "S608",  # False positive: SQL injection - field names validated, values parameterized (see code comments)
]
"src/mcp_server_langgraph/core/cache.py" = [
    "S301",  # False positive: pickle used for internal Redis cache only, not untrusted data
]
"src/mcp_server_langgraph/core/config.py" = [
    "S105",  # False positive: checking FOR hardcoded password, not using one
]
"src/mcp_server_langgraph/core/security.py" = [
    "S105",  # False positive: "[REDACTED]" is a placeholder for sanitizing, not a password
]
"src/mcp_server_langgraph/execution/docker_sandbox.py" = [
    "S108",  # False positive: Docker tmpfs mount paths, ephemeral in-memory storage
]
"src/mcp_server_langgraph/health/database_checks.py" = [
    "S107",  # False positive: default credentials for local dev health checks only
]
"src/mcp_server_langgraph/mcp/server_streamable.py" = [
    "S106",  # False positive: "bearer" is OAuth2 token type (RFC 6750), not a password
]
"src/mcp_server_langgraph/monitoring/cost_tracker.py" = [
    "S106",  # False positive: "input"/"output" are LLM token types, not auth tokens
]
# __all__ intentionally grouped by category for documentation purposes
"src/mcp_server_langgraph/compliance/__init__.py" = ["RUF022"]
"src/mcp_server_langgraph/resilience/__init__.py" = ["RUF022"]
"tests/utils/__init__.py" = ["RUF022"]
# ASYNC230: Quick JSON file writes in async context - blocking is acceptable for small I/O
"src/mcp_server_langgraph/compliance/soc2/evidence.py" = ["ASYNC230"]
"src/mcp_server_langgraph/schedulers/compliance.py" = ["ASYNC230"]
"tests/integration/test_soc2_evidence.py" = ["ASYNC230"]

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==============================================================================
# LEGACY TOOLS REMOVED (2025-11-28)
# ==============================================================================
# Migration Complete: black, isort, flake8 → Ruff
#
# Commands:
#   make lint-check   # Ruff linter
#   make lint-fix     # Ruff auto-fix + format
#   make lint-format  # Ruff format only
#
# See: docs-internal/TOOLING_CONSOLIDATION_MIGRATION.md for migration guide
# ==============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# STRICT MODE: Do NOT ignore missing imports for our own code
# Use per-module overrides below for third-party libraries
ignore_missing_imports = false
# Stricter type checking for production
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
# Allow some flexibility for third-party libraries (will be phased out)
disallow_untyped_calls = false
# Exclude test files and incomplete modules from strict checking
exclude = [
    "tests/",
    "test_.*\\.py$",
    "conftest\\.py$",
]

# Per-module overrides for third-party libraries without type stubs
# This is the modern best practice: strict for our code, lenient for third-party
[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "pybreaker.*",
    "slowapi.*",
    "pydantic_ai.*",
    "langgraph.*",
    "langchain.*",
    "cryptography.*",
    "sqlalchemy.*",
    "kubernetes.*",
    "docker.*",
    "asyncpg.*",
    "infisical_client.*",
    "opentelemetry.*",
    "jwt.*",
    "apscheduler.*",
    "openfga_sdk.*",
    "bcrypt.*",
    "mcp.*",
    "sentence_transformers.*",
    "cachetools.*",
    "redis.*",  # redis 6.x inline types are incomplete (from_url untyped, generic params issues)
    "google.cloud.*",  # GCP libraries lack py.typed marker
]
ignore_missing_imports = true
# Disable additional strict checks for third-party libraries
disallow_untyped_defs = false
disallow_untyped_calls = false

# GCP Cloud backend modules - allow unused type: ignore comments
# These files use conditional imports for optional GCP dependencies.
# In CI (without GCP packages), mypy reports attr-defined errors requiring ignores.
# Locally (with GCP packages), the ignores are unused. Suppress this warning.
[[tool.mypy.overrides]]
module = [
    "mcp_server_langgraph.observability.query.backends.cloudlogging",
    "mcp_server_langgraph.observability.query.backends.cloudtrace",
    "mcp_server_langgraph.observability.query.backends.cloudmonitoring",
]
warn_unused_ignores = false

# Gradual strictness rollout - Phase 1: Core modules with full strict typing
[[tool.mypy.overrides]]
module = [
    "config",
    "feature_flags",
    "observability",
]
disallow_untyped_calls = true
strict = true

# Phase 2: Auth, LLM, and Agent modules - Now with strict typing
[[tool.mypy.overrides]]
module = [
    "mcp_server_langgraph.auth.*",
    "mcp_server_langgraph.auth.factory",
    "mcp_server_langgraph.llm.*",
    "mcp_server_langgraph.core.agent",
]
disallow_untyped_calls = true
strict = true

# Phase 3: Additional core modules with comprehensive test coverage
[[tool.mypy.overrides]]
module = [
    "mcp_server_langgraph.core.context_manager",
    "mcp_server_langgraph.core.parallel_executor",
    "mcp_server_langgraph.utils.response_optimizer",
    "mcp_server_langgraph.health.checks",
    "mcp_server_langgraph.monitoring.sla",
]
disallow_untyped_calls = true
strict = true

# Phase 4: Compliance and resilience modules - Production-critical for GDPR/HIPAA/SOC2
[[tool.mypy.overrides]]
module = [
    "mcp_server_langgraph.compliance.gdpr.storage",
    "mcp_server_langgraph.compliance.gdpr.postgres_storage",
    "mcp_server_langgraph.compliance.gdpr.factory",
    "mcp_server_langgraph.compliance.gdpr.data_export",
    "mcp_server_langgraph.compliance.gdpr.data_deletion",
    "mcp_server_langgraph.compliance.retention",
    "mcp_server_langgraph.compliance.soc2.evidence",
    "mcp_server_langgraph.resilience.retry",
    "mcp_server_langgraph.resilience.fallback",
    "mcp_server_langgraph.resilience.circuit_breaker",
]
disallow_untyped_calls = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]  # Allow importing from scripts/ directory
norecursedirs = ["scripts/archive/*", "*.egg", ".eggs", "dist", "build", "docs", ".git", ".venv", "venv", "__pycache__", ".hypothesis"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Default options for all test runs (optimized for development speed)
# Coverage disabled by default for faster iteration (20-30% speedup)
# CI and coverage targets explicitly enable coverage with --cov flag
# --dist loadgroup: Respects @pytest.mark.xdist_group markers to prevent race conditions
#                   Tests with same xdist_group run on same worker; others use load balancing
# --timeout=60: Prevent tests from hanging indefinitely (async mock safety)
# FAIL FAST: No auto-retries - flaky tests must be fixed at the root cause
# NOTE: -p no:anyio disables anyio's pytest plugin which conflicts with pytest-asyncio's auto mode
# when running with pytest-xdist. Without this, xdist workers fail with "No such backend: asyncio"
# See: https://anyio.readthedocs.io/en/stable/testing.html
addopts = "-v --strict-markers --tb=short --dist loadgroup --timeout=60 --benchmark-disable -p no:anyio"
# pytest-asyncio configuration (0.23+ uses strict mode by default)
asyncio_mode = "auto"
# CODEX FINDING FIX (2025-11-20): Set to "session" to support session-scoped async fixtures
# (postgres_connection_real, redis_client_real, openfga_client_real) without ScopeMismatch errors
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
# Filter warnings to reduce test output noise
filterwarnings = [
    "ignore:GDPR endpoints use in-memory storage.*:RuntimeWarning",
    # External library warnings (cannot fix directly)
    "ignore:.*enable_cleanup_closed ignored.*:DeprecationWarning:aiohttp",
    "ignore:Using.*@model_validator.*classmethod.*:DeprecationWarning:google.genai",
    # Kubernetes client uses deprecated urllib3 API - upstream issue not fixed yet
    # See: https://github.com/kubernetes-client/python/issues/2024
    "ignore:HTTPResponse.getheaders\\(\\) is deprecated.*:DeprecationWarning:kubernetes.client.rest",
    # Litellm async cleanup warning (OpenAI Codex Finding 2025-11-15)
    # Root cause: litellm's atexit handler calls loop.create_task() without awaiting
    # Our pytest_sessionfinish hook already handles cleanup properly
    "ignore::RuntimeWarning:litellm.llms.custom_httpx.async_client_cleanup",
    # Litellm uses deprecated Pydantic V1 class-based config (external library issue)
    # See: https://errors.pydantic.dev/2.12/migration/ - litellm needs to update
    # Note: Uses PydanticDeprecatedSince20 which is a DeprecationWarning subclass
    "ignore:Support for class-based `config` is deprecated.*:DeprecationWarning",
    # Internal warnings
    "ignore:coroutine.*was never awaited.*:RuntimeWarning:mcp_server_langgraph.resilience.circuit_breaker",
    "ignore:Pydantic serializer warnings.*:UserWarning:pydantic.main",
    # Test environment expected warnings (OpenAI Codex Finding 2025-11-15)
    # InMemory auth provider is intentionally used in tests for isolation
    "ignore:InMemoryUserProvider is being used in 'test' environment.*:UserWarning:mcp_server_langgraph.auth.factory",
    # OpenFGA fallback mode is expected when OPENFGA_STORE_ID/MODEL_ID not set
    "ignore:OpenFGA not configured, authorization will use fallback mode.*:UserWarning:mcp_server_langgraph.mcp.server_stdio",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (full system tests)",
    "smoke: Smoke tests (critical path validation, CI startup verification)",
    "slow: Slow tests (> 1 second)",
    "timeout: Custom timeout override for pytest-timeout plugin (used for meta-tests running subprocesses)",
    "auth: Authentication/authorization tests",
    "api: API endpoint tests (REST API contract testing)",
    "openfga: OpenFGA integration tests",
    "infisical: Infisical integration tests",
    "mcp: MCP protocol tests",
    "llm: LLM API tests (expensive, requires API keys, skipped in CI)",
    "observability: OpenTelemetry/metrics/logging tests",
    "metrics: Prometheus/OTel metrics instrumentation tests",
    "benchmark: Performance benchmark tests",
    "property: Property-based tests (hypothesis)",
    "scim: SCIM 2.0 provisioning tests",
    "contract: Contract tests (MCP protocol, OpenAPI)",
    "regression: Performance regression tests",
    "mutation: Mutation testing (slow, runs on schedule)",
    "compliance: Generic compliance tests (metrics, auditing)",
    "gdpr: GDPR compliance tests (data subject rights)",
    "soc2: SOC 2 compliance tests (evidence collection, access reviews)",
    "sla: SLA monitoring tests (uptime, response time, error rate)",
    "performance: Performance tests (load, stress, benchmarks)",
    "stress: Stress tests (high load, parallel execution stress)",
    "security: Security tests (injection attacks, OWASP Top 10)",
    "kubernetes: Kubernetes integration tests (health probes, deployments)",
    "deployment: Deployment configuration and validation tests (Helm, Kustomize, placeholders)",
    "preview: Preview environment deployment tests",
    "skip_resilience_reset: Opt-out of autouse resilience state reset fixture (for circuit breaker tests)",
    "infrastructure: Infrastructure and deployment configuration tests",
    "database: Database integration tests (schema setup, migrations, queries)",
    "diagnostic: Diagnostic and troubleshooting tests",
    "documentation: Documentation validation tests (code blocks, examples)",
    "precommit: Pre-commit hook validation tests",
    "xdist_isolation: Tests requiring strict isolation in xdist parallel execution",
    "terraform: Terraform configuration tests",
    "ci: CI/CD pipeline and workflow tests",
    "asyncio: Async tests using pytest-asyncio",
    "xdist_group: Test grouping for pytest-xdist parallel execution (prevents memory issues)",
    "external_deps: Tests requiring external dependencies or services",
    "meta: Meta tests (test suite validation, CI/CD checks)",
    "requires_kustomize: Tests requiring kustomize CLI tool",
    "requires_kubectl: Tests requiring kubectl CLI tool",
    "requires_helm: Tests requiring helm CLI tool",
    "requires_full_infrastructure: Tests requiring full infrastructure (make test-infra-full-up)",
    "validation: Validation tests for deployments and configurations",
    "cli: CLI tool tests",
    "skip_isolation_check: Skip enforce_worker_isolation check (for tests using worker-scoped schemas)",
    "docker: Docker image and Dockerfile tests",
    "playground: Interactive playground tests (API, WebSocket, sessions)",
    "websocket: WebSocket endpoint tests (streaming, real-time)",
    "builder: Visual workflow builder tests",
    "redis: Redis-backed storage tests (sessions, checkpoints)",
    "postgres: PostgreSQL-backed storage tests (workflows, sessions, durable persistence)",
    "requires_full_infrastructure: Tests requiring full Docker infrastructure (builder, playground, observability stack)",
]
# CODEX FINDING #4: Benchmark configuration
# Benchmarks are DISABLED by default for fast test iteration (via --benchmark-disable in addopts)
# Enable with: pytest --benchmark-enable
# CI explicitly enables with: pytest -m benchmark --benchmark-only
# NOTE: pytest-benchmark config moved inline since pytest 9.x doesn't allow mixing
# [tool.pytest.benchmark] with [tool.pytest.ini_options] - use CLI flags instead
# benchmark_disable = false  # Use marker-based filtering (--benchmark-disable in addopts)
# benchmark_disable_gc = true  # More accurate benchmarks by disabling GC
# benchmark_min_rounds = 5  # Minimum number of rounds (default)
# benchmark_warmup = true  # Run warmup iteration before measuring

[tool.coverage.run]
source = ["src/mcp_server_langgraph"]
parallel = true  # Enable parallel coverage for pytest-xdist
branch = true  # Enable branch coverage for more comprehensive analysis
omit = [
    "*/venv/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/examples/*",
    "*/scripts/*",
    "*/hooks/*",
    "*/langgraph_platform/*",
    "*/presets/*",  # Developer tools - quickstart presets not production code
    "*/playground/*",  # Developer tools - web playground not production code
    "setup.py",
    # Note: MCP server entry points are now included in coverage
    # They are tested via integration tests with coverage collection enabled
]

[tool.coverage.report]
# Codex Recommendation: Enforce minimum 80% coverage threshold
# Prevents coverage regressions and ensures adequate test coverage
# Current: 66% (incremental progress: +2% from 64%)
# Target: 80%+ (tracked in GitHub issue, incremental increases per release)
# Current: 74.5%, aligned with workflow at 75%
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.hypothesis]
# Property-based testing configuration (optimized for development speed)
# Development: 25 examples for fast iteration (75% faster than 100)
# CI overrides with --hypothesis-max-examples=100 for comprehensive testing
max_examples = 25  # Number of test cases to generate (dev: 25, CI: 100)
deadline = 2000  # ms - max time per test case (reduced for faster feedback)
verbosity = "normal"  # normal, verbose, debug
database = ".hypothesis/examples"  # Store failing examples
derandomize = false  # Set true for deterministic testing

[tool.mutmut]
# Mutation testing configuration
#
# Target Mutation Score: 85% (industry best practice)
#   - <70%: Poor - Many untested code paths
#   - 70-80%: Acceptable - Most code paths tested
#   - 80-90%: Good - Comprehensive test coverage
#   - >90%: Excellent - Very thorough testing
#
# Current implementation:
#   - Runs weekly via GitHub Actions (quality-tests.yaml)
#   - Focuses on core business logic files only
#   - Uses fast unit tests (pytest -x -m unit)
#   - Results available as workflow artifacts
#
# How to run locally:
#   mutmut run
#   mutmut results  # View summary
#   mutmut html     # Generate HTML report
#
paths_to_mutate = [
    "agent.py",
    "auth.py",
    "config.py",
    "feature_flags.py",
    "llm_factory.py",
    "observability.py",
    "openfga_client.py",
]
backup = false
runner = "pytest -x -m unit"  # Fast unit tests only
tests_dir = "tests/"
dict_synonyms = "Struct,NamedStruct"

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "hypothesis>=6.100.0,<6.147.0",  # Pin <6.147.0: 6.147.x has xdist import race on 3.11, 6.148.x removed optimiser module
    "hypothesis-jsonschema>=0.23.1",
    "mypy>=1.19.0",  # Updated 2025-11-28: 40% faster type checking
    "pre-commit>=4.5.0",  # Updated 2025-11-28: Latest updates
    "pytest>=9.0.1",  # Updated 2025-11-28: MAJOR 8.x→9.x (pytest-split removed, unblocking upgrade)
    "pytest-asyncio>=1.3.0",  # Updated 2025-11-28: Python 3.14 support
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    # pytest-testmon removed (2025-11-28) - incompatible with pytest 9.x
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.8.0",
    "python-hcl2>=7.3.1", # HCL parser for Terraform regression tests
    "semgrep>=1.79.0",
    "types-pyyaml>=6.0.12.20250915",
]

# Cost tracking and CI/CD analytics dependencies
cost-tracking = [
    "requests>=2.32.0",  # HTTP client for GitHub API
    "pandas>=2.2.0",     # Data analysis for workflow metrics
    "tabulate>=0.9.0",   # Table formatting for reports
]
